bug: fixed text clipping in mobile

--- a/style.css
+++ b/style.css
@@ -273,10 +273,6 @@ body.light-mode .nav-bar a:hover{
     height: 10vh;
     width: 100%;
 }
-/* .skills .contact{
-    background-color: hsl(250, 24%, 9%);
-} */
-
 
 #projects{
     font-size: 50px;
@@ -606,15 +602,22 @@ footer p{
 .footer-links li{
     font-size: 50px;
     margin: 0 10px;
+    /* text-decoration: none; */
+}
+.footer-links li a{
+     /* color: white; */
+    text-decoration: none;
+    opacity: 90%;
 }
 
 
 
 footer{
     /* background-color: #121212; */
-    /* border: 10px solid #121212; */
-    border: 10px solid black;
-    background-color: black;
+    border: 10px solid rgb(0, 2, 18);
+    /* border: 10px solid black; */
+    /* background-color: black; */
+    background-color: rgb(0, 2, 18);
     /* margin-top: 200px; */
     padding-top: 20px;
 }
@@ -771,11 +774,6 @@ h3{
   }
 
 
-  /* .umbrella:hover {
-    c
-  } */
-
-  
   .rain {
     position: absolute;
     top: 50%;
@@ -838,9 +836,6 @@ show 2/3 skills in a row or make it way smaller projects in a column */
         max-height: 50vh;
         /* box-shadow: 0 0 8px 8px white inset; */
         /* box-shadow: 0 0 10px 50px rgba(128, 0, 128, 0.5); */
-
-
-
     }
     #introduction h2 {
         font-size: 30px;
@@ -871,11 +866,25 @@ show 2/3 skills in a row or make it way smaller projects in a column */
         text-align: center; 
     }
 
-    .project-capsule{
-        flex-direction: column;
+    .project-link{
+        /* flex-direction: column; */
         overflow: hidden;
-
     }
+    .project-capsule{
+        flex-wrap: wrap;
+        /* flex-direction: column; */
+    }
+    .project-link:hover .imgdesc div{
+        transform: translate(-50%, 7%);
+        transition-duration: 0.55s;
+        transition-timing-function: ease-in-out;
+    }
+
+    .imgdesc-points{
+        margin: auto;
+    }
+
+
 
     .icon-container img{
         width: 40px;
@@ -887,6 +896,9 @@ show 2/3 skills in a row or make it way smaller projects in a column */
     }
 
     #animated-image {
+        display: none;
+    }
+    #animated-image1 {
         display: none;
     }
     *{
